--- a/assets/individual_product.css
+++ b/assets/individual_product.css
@@ -69,7 +69,7 @@ div.extra__details__container {
 }
 
 div.overflow__container {
-  margin-top: 3vh;
+  margin-top: 1vh;
   margin-bottom: 3vh;
   height: 55vh;
   overflow: scroll;
@@ -79,6 +79,14 @@ div.overflow__container {
   -webkit-mask:
    linear-gradient( 0deg, #000 100%, transparent) top,
    linear-gradient( 180deg, #000 100%, transparent) bottom;
+-webkit-mask-size: 100% 50%;
+-webkit-mask-repeat:no-repeat;
+}
+
+.masked-overflow {
+  -webkit-mask:
+   linear-gradient( 0deg, #000 90%, transparent) top,
+   linear-gradient( 180deg, #000 90%, transparent) bottom;
 -webkit-mask-size: 100% 50%;
 -webkit-mask-repeat:no-repeat;
 }
@@ -168,6 +176,10 @@ hr#addToBagLine {
   margin: 0 0 0 0;
   opacity: 0;
   margin-bottom: 100px;
+}
+
+hr#addToBagLine.hovered {
+  opacity: 1;
 }
 
 hr#bottomLine {
