--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -130,7 +130,7 @@
     </div>
 
     <div class="content__wrapper" id="About">
-      <img class="about__image" src="{{ 'about_image.png' | asset_url }}">
+      <img class="about__image" src="{{ 'AboutPage_Sept23.png' | asset_url }}">
       <!-- <span>
         <div> -->
           <span class="footer__titles__wrapper">
