--- a/assets/individual_product.css
+++ b/assets/individual_product.css
@@ -294,6 +294,7 @@ p#topParagraph {
     cursor: pointer;
     font-size: 1.6rem;
     color: white;
+    font-weight: lighter;
   }
 
   div.main__description {
