--- a/assets/cart.css
+++ b/assets/cart.css
@@ -174,6 +174,7 @@ div.second-cart {
 
   cart-items.page-width {
     margin-bottom: 50vh;
+    margin-bottom: 85vh;
   }
 
   /* cart-items.is-empty {
