--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -13,7 +13,7 @@
       <a href="#ShippingPolicyMobile" class="menu__items content__buttons">SHIPPING POLICY</a>
       <a onclick="openTab(event, 'About')" class="menu__items content__buttons">ABOUT</a>
       <a onclick="openTab(event, 'Contact')" class="menu__items content__buttons">CONTACT</a>
-      <a href="/pages/how-to-use" class="menu__items content__buttons">HOW TO USE</a>
+      <a onclick="openTab(event, 'HowtoCare')" class="menu__items content__buttons">HOW TO CARE</a>
     </div>
     <div class="options__wrapper">
       <div class="newsletter__footer footer_inmenu_newsletter">
@@ -189,6 +189,44 @@
       </span> -->
       <div id="AboutMobile"></div>
     </div>
+
+
+    <div class="content__wrapper" id="HowtoCare">
+      <!-- <span>
+        <div> -->
+          <span class="footer__titles__wrapper">
+            <a class="product__title"><span id="mobileDot"> • </span>HOW TO CARE</a>
+            <button class="close__options__container menu__items" id="footerOptionsContainerCloseButton">(close)</button>
+          </span>
+          <div>
+            <a class="hidden__item">Show Details</a>
+          </div>
+          <div class="description__container">
+            <p>
+              All our pieces are handmade using 100% hand-dyed cotton yarn. Due to this nature, please note that items are not all exactly the same, and you may find a small ‘knot’ or two on your bag, representing the end of a piece of yarn (crocheters out there - if you know you know!).
+              <br>
+              <br>
+              Whilst your piece will not need to be laundered frequently - it is important to know that it can be cleaned. Due to the natural fibres, the bag will slightly stretch if the contents is heavy - re-shrinking the item can happen in the drying process. Please note the following steps to cleaning your piece.
+              <br>
+              <br>
+              <br>
+              *please note: the heavier the contents, the more your crochet piece will drop. This also refers to dance floor visits (recommended, but please take care)
+              <br>
+              <br>
+              <br>
+              Option 1 - Dry-clean. Discuss with your local drycleaner the most effective way to treat your 100% cotton piece. Yarn will not leak colour.
+              <br>
+              <br>
+              Option 2 - Hand-wash. Fill a basin with cold water and add a natural wool-wash detergent. Gently swish crochet item in the soapy water - do not wring or scrub. Rinse in cold water and repeat this process until the item is free of soap. Gently squeeze remaining water and lay flat on a towel to dry, flipping half way through drying process.
+              <br>
+              <br>
+              Option 3 - Machine wash. Using a natural wool-wash detergent, machine-wash the item on a gentle cycle. Place into a laundry bag, and place in the dryer until just dry.”
+            </p>
+          </div>
+        <!-- </div>
+      </span> -->
+      <div id="RefundsAndExchangesMobile"></div>
+    </div>
 </div>
 
 <div id="mobileScroller" class="scrollmenu">
@@ -196,6 +234,7 @@
   <a class="mobile-scroller-buttons" href="#ShippingPolicyMobile" id="shippingButton">SHIPPING POLICY</a>
   <a class="mobile-scroller-buttons" href="#AboutMobile" id="aboutButton">ABOUT</a>
   <a class="mobile-scroller-buttons contact-mobile-scroll-title" href="#ContactMobile" id="contactButton">CONTACT</a>
+  <a class="mobile-scroller-buttons" href="#AboutMobile" id="careButton">HOW TO CARE</a>
 </div>
 <!-- <div id="whiteBackground"></div> -->
 <div id="gradiantBox"></div>
@@ -204,21 +243,21 @@
 
 <footer class="footer">
   <div class="options__wrapper">
-    <a class="menu__items" href="/">DEL SOL SALON <span id="year"></span></a>
+    <a class="menu__items" href="/">aqua mode <span id="year"></span></a>
   </div>
   <div class="options__wrapper middle" id="desktopMenu">
     <a onclick="openTab(event, 'RefundsAndExchanges')" class="menu__items content__buttons" id="footerRE">RETURNS & EXCHANGES</a>
     <a onclick="openTab(event, 'ShippingPolicy')" class="menu__items content__buttons" id="footerSP">SHIPPING POLICY</a>
     <a onclick="openTab(event, 'About')" class="menu__items content__buttons" id="footerAbout">ABOUT</a>
     <a onclick="openTab(event, 'Contact')" class="menu__items content__buttons" id="footerContact">CONTACT</a>
-    <a href="/pages/how-to-use" class="menu__items content__buttons" id="footerContact">HOW TO USE</a>
+    <a onclick="openTab(event, 'HowtoCare')" class="menu__items content__buttons">HOW TO CARE</a>
   </div>
   <div class="options__wrapper middle" id="mobileMenu">
     <a class="menu__items content__buttons" id="footerRE">RETURNS & EXCHANGES</a>
     <a class="menu__items content__buttons" id="footerSP">SHIPPING POLICY</a>
     <a class="menu__items content__buttons" id="footerAbout">ABOUT</a>
     <a class="menu__items content__buttons" id="footerContact">CONTACT</a>
-    <a href="/pages/how-to-use" class="menu__items content__buttons" id="footerContact">HOW TO USE</a>
+    <a onclick="openTab(event, 'HowtoCare')" class="menu__items content__buttons">HOW TO CARE</a>
   </div>
   <div class="options__wrapper">
     <div class="newsletter__footer">
