--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -13,7 +13,7 @@
       <a href="#ShippingPolicyMobile" class="menu__items content__buttons">SHIPPING POLICY</a>
       <a onclick="openTab(event, 'About')" class="menu__items content__buttons">ABOUT</a>
       <a onclick="openTab(event, 'Contact')" class="menu__items content__buttons">CONTACT</a>
-      <a onclick="openTab(event, 'HowtoCare')" class="menu__items content__buttons">HOW TO CARE</a>
+      {% comment %} <a onclick="openTab(event, 'HowtoCare')" class="menu__items content__buttons">HOW TO CARE</a> {% endcomment %}
     </div>
     <div class="options__wrapper">
       <div class="newsletter__footer footer_inmenu_newsletter">
@@ -187,7 +187,7 @@
           </div>
         <!-- </div>
       </span> -->
-      <div id="AboutMobile"></div>
+      <div id="HowtoCareMobile"></div>
     </div>
 
 
@@ -225,7 +225,7 @@
           </div>
         <!-- </div>
       </span> -->
-      <div id="RefundsAndExchangesMobile"></div>
+      <div id="AboutMobile"></div>
     </div>
 </div>
 
@@ -234,7 +234,7 @@
   <a class="mobile-scroller-buttons" href="#ShippingPolicyMobile" id="shippingButton">SHIPPING POLICY</a>
   <a class="mobile-scroller-buttons" href="#AboutMobile" id="aboutButton">ABOUT</a>
   <a class="mobile-scroller-buttons contact-mobile-scroll-title" href="#ContactMobile" id="contactButton">CONTACT</a>
-  <a class="mobile-scroller-buttons" href="#AboutMobile" id="careButton">HOW TO CARE</a>
+  <a class="mobile-scroller-buttons" href="#HowtoCareMobile" id="careButton">HOW TO CARE</a>
 </div>
 <!-- <div id="whiteBackground"></div> -->
 <div id="gradiantBox"></div>
