--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -105,9 +105,9 @@
         </div>
       </form>
     </div>
-    <a id="skincareTitle" class="menu__items {% if handle == 'skincare' %} active__page__title {% endif %}" href="/collections/skincare" id="collectionOneTitle">
-      {{ collections['skincare'].title }}
-      <span>{{ collections['skincare'].products.count }}</span>
+    <a id="skincareTitle" class="menu__items {% if handle == 'shop-all' %} active__page__title {% endif %}" href="/collections/shop-all" id="collectionOneTitle">
+      {{ collections['shop-all'].title }}
+      <span>{{ collections['shop-all'].products.count }}</span>
     </a>
     <a id="accessoriesTitle" class="menu__items {% if handle == 'accessories' %} active__page__title {% endif %}" href="/collections/accessories" id="collectionTwoTitle">
       {{ collections['accessories'].title }}
